refactor:Updated Swagger
