# app/routes/routes.js
@@ -19,6 +19,6 @@ module.exports = (app) => {
   app.post('/createnotes', helper.verifyToken, noteController.createNotes);
   app.put('/note/:notesId', helper.verifyToken, noteController.updateNote);
   app.get('/getnotes', helper.verifyToken, noteController.getAllNotes);
-  app.get('/note/:notesId', helper.verifyToken, noteController.getOne);
+  app.get('/note/:noteId', helper.verifyToken, noteController.getOne);
   app.delete('/deletenote/:notesId', helper.verifyToken, noteController.deleteNotes);
 };
